--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+setuptools>=58.0.0
+wheel
+gunicorn
+
 absl-py==2.1.0
 asgiref==3.8.1
 astunparse==1.6.3
@@ -45,7 +49,6 @@ scikit-learn==1.3.2
 scipy==1.10.1
 seaborn==0.13.2
 six==1.16.0
-sklearn==0.0
 sqlparse==0.5.0
 tensorboard==2.10.1
 tensorboard-data-server==0.6.1
