--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-Django>=3.2
+Django==3.2.22
 gunicorn
 psycopg2-binary
 whitenoise
 setuptools>=65.5.1
 wheel>=0.38.4
 pip>=23.3.1
-gunicorn
+
 
 absl-py==2.1.0
 asgiref==3.8.1
