--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,10 @@
 nixPkgs = ["python310", "python310Packages.setuptools", "python310Packages.pip", "python310Packages.wheel"]
 
 [phases.install]
-cmds = ["pip install --upgrade pip setuptools wheel"]
+cmds = [
+  "pip install --upgrade pip setuptools wheel",
+  "pip install --only-binary=:all: -r requirements.txt"
+]
 
-[start]
-cmd = "gunicorn HumanAction.wsgi:application --bind 0.0.0.0:${PORT:-8000}"
+[phases.start]
+cmd = "gunicorn HumanAction.wsgi --bind 0.0.0.0:${PORT:-8000}"
