--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,16 @@
 [phases.setup]
-nixPkgs = ["python310", "python310Packages.setuptools", "python310Packages.pip", "python310Packages.wheel"]
+nixPkgs = [
+  "python310", 
+  "python310Packages.setuptools", 
+  "python310Packages.pip", 
+  "python310Packages.wheel"
+]
 
 [phases.install]
 cmds = [
   "pip install --upgrade pip setuptools wheel",
-  "pip install --only-binary=:all: -r requirements.txt"
+  "pip install -r requirements.txt"
 ]
 
 [phases.start]
-cmd = "gunicorn HumanAction.wsgi --bind 0.0.0.0:${PORT:-8000}"
+cmd = "gunicorn HumanAction.wsgi:application --bind 0.0.0.0:${PORT:-8000}"
