--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -13,4 +13,5 @@ cmds = [
 ]
 
 [phases.start]
-cmd = "gunicorn HumanAction.wsgi:application --bind 0.0.0.0:${PORT:-8000}"
+gunicorn Code.HumanAction.HumanAction.wsgi:application --bind 0.0.0.0:${PORT:-8000}
+
